demo/tekton/pipelines/inventory/base/inventory-el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: inventory
  name: el-inventory
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-inventory
    weight: 100
  tls:
    termination: edge
